--- a/public/modules/users/views/authentication/signin.client.view.html
+++ b/public/modules/users/views/authentication/signin.client.view.html
@@ -1,5 +1,5 @@
 <section class="row" data-ng-controller="AuthenticationController">
-	<h3 class="col-md-12 text-center">Sign in using your social accounts</h3>
+	<!--h3 class="col-md-12 text-center">Sign in using your social accounts</h3>
 	<div class="col-md-12 text-center">
 		<a href="/auth/facebook" class="undecorated-link">
 			<img src="/modules/users/img/buttons/facebook.png">
@@ -17,7 +17,7 @@
 			<img src="/modules/users/img/buttons/github.png">
 		</a>
 	</div>
-	<h3 class="col-md-12 text-center">Or with your account</h3>
+	<h3 class="col-md-12 text-center">Or with your account</h3-->
 	<div class="col-xs-offset-2 col-xs-8 col-md-offset-2 col-md-8">
 	    <form name="signInForm" data-ng-submit="signin()" class="form-horizontal" novalidate>
 	        <fieldset>
